# AfterBurner-Post-Write-Companion

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: backendManager.ts  extension.ts  treeProvider.ts
integrations/: __init__.py  api_server.py  cli.py  mcp_server.py
src/: __init__.py
src/agents/: __init__.py  change_detector.py  git_guardian.py  launch_controller.py  security_sentinel.py  test_pilot.py
src/config/: __init__.py  settings.py
src/graph/: __init__.py  state.py  workflow.py
src/models/: __init__.py  reports.py
src/tools/: __init__.py  deploy_tools.py  git_tools.py  github_tools.py  monitoring_tools.py  security_tools.py  test_tools.py
src/utils/: __init__.py  llm.py  logging.py
